Renamed to Dissemination

--- a/config/menus/dapaas.yml
+++ b/config/menus/dapaas.yml
@@ -35,5 +35,5 @@
     title: "Blog"
     link: "/dapaas-blog"
    - 
-    title: "Media assets"
+    title: "Dissemination"
     link: "/dapaas-media-assets"
