Added partner biographies to menu

--- a/config/menus/dapaas.yml
+++ b/config/menus/dapaas.yml
@@ -19,6 +19,9 @@
     title: "Partners"
     link: "/dapaas-partners"
    -
+    title: "Partner Biographies"
+    link: "/dapaas-partner-biographies"
+   -
     title: "Links"
     link: "/dapaas-links"
    -
