Created social media icons and Nav bar
Added social media icons to the footer and updated the news section in
the nav bar.

--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -81,7 +81,7 @@
     title: "Previous events"
     link: "/events/previous"
  - 
-  title: "News"
+  title: "News & blog"
   link: "/news"
   items:
     -
