--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -73,6 +73,9 @@
    - 
     title: "Case studies"
     link: "/case-studies"
+   - 
+    title: "Training FAQs"
+    link: "/training-faqs"
  - 
   title: "What's happening"
   link: "/events"
