--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -58,7 +58,7 @@
      title: "Consultation responses"
      link: "/consultation-responses"
  - 
-  title: "Learning"
+  title: "Learning & courses"
   link: "/learning"
   items:
    -
