Updated nav menu link
Learning and courses page was not functioning.

--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -62,7 +62,7 @@
      link: "http://theodi.org/blog/partnership-for-open-data-impact-stories-competition"
  - 
   title: "Learning & courses"
-  link: "/learning"
+  link: "/courses"
   items:
    -
     title: "Courses"
