--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -59,7 +59,7 @@
      link: "/consultation-responses"
     -
      title: "Partnership for Open Data"
-     link: "http://theodi.org/blog/partnership-for-open-data-impact-stories-competition"
+     link: "http://theodi.org/odp4d"
  - 
   title: "Learning & courses"
   link: "/courses"
