Update made to the nav menu
Open Data Challenge Series

--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -53,7 +53,7 @@
      link: "/nodes"
     -
      title: "Challenge series"
-     link: "/challenge-series"
+     link: "/opendatachallengeseries"
     -
      title: "Consultation responses"
      link: "/consultation-responses"
