--- a/config/menus/dapaas.yml
+++ b/config/menus/dapaas.yml
@@ -8,6 +8,9 @@
   -
    title: "Reports"
    link: "/dapaas-reports"
+  -
+   title: "FAQ"
+   link: "/dapaas-faq"
  -
    title: "Partners"
    link: "/dapaas-partners"
