Added public consultations to the nav bar

--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -55,6 +55,9 @@
      title: "Challenge series"
      link: "/opendatachallengeseries"
     -
+     title: "Public consultations"
+     link: "/public-consultations"
+    -
      title: "Consultation responses"
      link: "/consultation-responses"
     -
