Added registered trainers link

--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -85,6 +85,9 @@
    - 
     title: "Training FAQs"
     link: "/training-faqs"
+   - 
+    title: "ODI registered trainers"
+    link: "/what-is-an-odi-registered-trainer"
  - 
   title: "What's happening"
   link: "/events"
