--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -6,6 +6,9 @@
     title: "About the ODI"
     link: "/about-us"
    -
+    title: "What is open data?"
+    link: "/what-is-open-data"
+   -
     title: "Team"
     link: "/team"
    -
