--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -86,7 +86,7 @@
     title: "Open cities"
     link: "/smart-cities"
    -
-    title: "Data Infrastructure"
+    title: "Data infrastructure"
     link: "/who-owns-our-data-infrastructure"
    -
     title: "Open Data Roadmap 2015"
