--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -96,6 +96,10 @@
    -
     title: "Data as Culture"
     link: "/culture"
+   -
+    title: "Globel development"
+    link: "/global-development-open-data"
+    
  -
   title: "Publications"
   link: "/publications"
