--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -97,7 +97,7 @@
     title: "Data as Culture"
     link: "/culture"
    -
-    title: "Globel development"
+    title: "Global development"
     link: "/global-development-open-data"
     
  -
