--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -99,6 +99,9 @@
    -
     title: "Global development"
     link: "/global-development-open-data"
+   -
+    title: "Generation open"
+    link: "/generation-o"
     
  -
   title: "Publications"
