Update menu - Finance
Adding finance sector under the Theme nav bar.

--- a/config/menus/www.yml
+++ b/config/menus/www.yml
@@ -102,6 +102,9 @@
    -
     title: "Generation open"
     link: "/generation-o"
+   -
+    title: "Finance"
+    link: "/finance"
  -
   title: "Publications"
   link: "/publications"
